fix: fix application.properties for Render PostgreSQL deployment